--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;700&family=Karantina&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -8,14 +10,35 @@
   --background-end-rgb: 255, 255, 255;
 }
 
-/* @media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+@layer base {
+  html {
+    scroll-behavior: smooth;
   }
-} */
 
-body {
-  color: black;
+  body {
+    @apply font-sans text-white; 
+  }
+
+  h1{
+    @apply text-[6.125rem] leading-[7.45rem] font-thin uppercase tracking-tighter mb-[148px];
+  }
+}
+
+@layer components {
+  .overlay {
+@apply w-screen relative bg-[#020f08]/50 -z-10;
+  }
+  .hero{
+    @apply w-screen bg-[url('/hero-bg_desk@1x.webp')] bg-cover relative -z-20 pb-[104px];
+  }
+  .nav-link {
+    @apply mr-14 inline-block;
+  }
+  .hero-btn{
+    @apply text-[32px] flex items-center w-[293px] h-[71px] relative font-bold py-4 px-16 bg-white/10 hover:bg-white/20 focus:bg-white/20 ;
+  }
+}
+
+button {
+  outline: none;
 }
