--- a/app/globals.css
+++ b/app/globals.css
@@ -16,26 +16,53 @@
   }
 
   body {
-    @apply font-sans text-white; 
-  }
-
-  h1{
-    @apply text-[6.125rem] leading-[7.45rem] font-thin uppercase tracking-tighter mb-[148px];
+    @apply font-sans text-white;
   }
 }
 
 @layer components {
-  .overlay {
-@apply w-screen relative bg-[#020f08]/50 -z-10;
+  .header {
+    @apply absolute left-1/2 top-0 z-10 flex w-screen -translate-x-1/2 transform justify-between px-5 pt-9 md:w-full md:px-8 md:pt-[25px] xl:w-[1235px] xl:justify-center xl:px-0 xl:pt-6;
   }
-  .hero{
-    @apply w-screen bg-[url('/hero-bg_desk@1x.webp')] bg-cover relative -z-20 pb-[104px];
+  /* .overlay {
+    @apply absolute w-full bg-[#020f08]/50;
+  } */
+  .hero {
+    @apply w-screen left-0 top-0 -z-10 h-full bg-[url('/background/hero-background@2x.webp')] bg-cover pb-14 md:pb-16 xl:pb-[104px] pt-[106px];
+  }
+  .section-container {
+    @apply mx-auto px-5 pt-[105px] md:flex justify-between md:max-w-3xl md:px-8 md:pt-[122px] xl:max-w-7xl xl:p-6 ;
+  }
+  .paragraph {
+    @apply mb-6 w-[158px] text-[10px] font-extralight tracking-normal md:mb-0 md:w-[263px] md:text-sm/4 md:tracking-[.09em] xl:w-full xl:text-base;
+  }
+  .title{
+    @apply mb-6 text-[40px] font-thin uppercase leading-[1.4] -tracking-[.04em] md:mb-[68px] md:text-[67px] md:leading-[1.15] md:-tracking-[3.9px] xl:text-[6.125rem] xl:leading-[7.45rem];
+  }
+  .hero-title {
+    @apply relative mb-[31px] text-end text-[37px] font-thin leading-[2.8rem] tracking-[.045em] md:mb-16 md:text-start md:text-[67px] md:leading-none md:tracking-[8.71px] xl:mb-[200px] xl:text-[6.125rem] xl:leading-[7rem] xl:tracking-normal;
+  }
+  .accent-text {
+    @apply absolute -bottom-[8px] right-0 text-xs font-light tracking-[.79em] md:-bottom-[17px] md:left-0 md:text-sm md:tracking-[26px] xl:-bottom-[19px] xl:text-base xl:tracking-[2.28em];
+  }
+  .nav-list {
+    @apply mx-auto flex h-[302px] w-fit flex-col justify-between text-center text-lg tracking-widest md:mt-[11px] md:block md:h-fit md:text-left md:text-sm;
   }
   .nav-link {
-    @apply mr-14 inline-block;
+    @apply inline-block md:mr-6 xl:mr-14;
   }
-  .hero-btn{
-    @apply text-[32px] flex items-center w-[293px] h-[71px] relative font-bold py-4 px-16 bg-white/10 hover:bg-white/20 focus:bg-white/20 ;
+  .hero-btn {
+    @apply relative mx-auto flex h-[53px] w-[280px] items-center justify-center bg-white/10 px-16 py-[18px] text-lg font-bold hover:bg-white/20 md:mx-0 md:h-[50px] md:w-[230px] md:py-3.5 xl:h-[71px] xl:w-[293px] xl:py-4 xl:text-[32px];
+  }
+  .btn-right-frame {
+    @apply absolute right-0 top-0 h-[53px] w-[42px] bg-[url('/icons/frame-right-mob.svg')] bg-cover md:h-[50px] md:w-[35px] md:bg-[url('/icons/frame-right-tab.svg')] xl:h-[71px] xl:w-11 xl:bg-[url('/icons/frame-right-desk.svg')];
+  }
+  .btn-left-frame {
+    @apply absolute left-0 top-0 h-[53px] w-[42px] bg-[url('/icons/frame-left-mob.svg')] bg-cover md:h-[50px] md:w-[35px] md:bg-[url('/icons/frame-left-tab.svg')] xl:h-[71px] xl:w-11 xl:bg-[url('/icons/frame-left-desk.svg')];
+  }
+  .about{ 
+    @apply w-screen h-full bg-[url('/background/about@2x.webp')] bg-cover xl:py-20
+
   }
 }
 
