--- a/app/globals.css
+++ b/app/globals.css
@@ -72,28 +72,28 @@
 
   /*SERVICES*/
   .services {
-    @apply xl:py-20 relative overflow-hidden max-w-full;
+    @apply relative overflow-hidden max-w-full xl:py-20;
   }
   .service-list {
-    @apply text-left md:text-[22px] md:leading-[0.818] xl:text-[28px]/6 uppercase font-extralight text-white/50;
+    @apply text-left text-xl leading-[1.1rem] md:text-[22px] md:leading-[0.818] xl:text-[28px]/6 uppercase font-extralight text-white/50;
   }
   .is-active {
-    @apply text-left text-white font-medium md:text-[22px] md:leading-[0.818] xl:text-[28px]/6 uppercase bg-[url('/icons/rhombus.svg')] bg-no-repeat bg-left pl-3.5;
+    @apply text-left text-xl leading-[1.1rem] text-white font-medium md:text-[22px] md:leading-[0.818] xl:text-[28px]/6 uppercase bg-[url('/icons/rhombus.svg')] bg-no-repeat bg-left pl-3.5;
   }
   .slide-one {
-    @apply translate-x-full absolute -z-10 top-0 h-[779px] w-screen bg-[url('/background/services/Background@2x_result.webp')] bg-cover;
+    @apply translate-x-full absolute -z-10 top-0 h-[851px] md:h-[779px] w-screen bg-[url('/background/services/Background@2x_result.webp')] bg-cover;
   }
   .slide-two {
-    @apply  translate-x-full absolute -z-10 top-0 h-[779px] w-screen bg-[url('/background/services/Background2@2x_result.webp')] bg-cover;
+    @apply  translate-x-full absolute -z-10 top-0 h-[851px] md:h-[779px] w-screen bg-[url('/background/services/Background2@2x_result.webp')] bg-cover;
   }
   .slide-three {
-    @apply translate-x-full absolute -z-10 top-0 h-[779px] w-screen bg-[url('/background/services/Background3@2x_result.webp')] bg-cover;
+    @apply translate-x-full absolute -z-10 top-0 h-[851px] md:h-[779px] w-screen bg-[url('/background/services/Background3@2x_result.webp')] bg-cover;
   }
   .slide-four {
-    @apply translate-x-full absolute -z-10 top-0 h-[779px] w-screen bg-[url('/background/services/Background4@2x_result.webp')] bg-cover;
+    @apply translate-x-full absolute -z-10 top-0 h-[851px] md:h-[779px] w-screen bg-[url('/background/services/Background4@2x_result.webp')] bg-cover;
   }
   .slide-five {
-    @apply translate-x-full absolute -z-10 top-0 h-[779px] w-screen bg-[url('/background/services/Background5@2x_result.webp')] bg-cover;
+    @apply translate-x-full absolute -z-10 top-0 h-[851px] md:h-[779px] w-screen bg-[url('/background/services/Background5@2x_result.webp')] bg-cover;
   }
   .active-slide{
     @apply animate-[sliderForward_320ms_ease-in_forwards]
