--- a/app/globals.css
+++ b/app/globals.css
@@ -16,7 +16,7 @@
   }
 
   body {
-    @apply font-sans text-white bg-[rgb(23,36,41)];
+    @apply bg-[rgb(23,36,41)] font-sans text-white;
   }
 }
 
@@ -53,7 +53,7 @@
 
   /*HERO*/
   .hero {
-    @apply bg-center left-0 top-0 -z-10 h-full w-screen bg-[url('/background/hero/hero-background@2x.webp')] bg-cover pt-[50px] md:pb-0 md:pt-[60px] xl:pb-[80px] xl:pt-[106px];
+    @apply left-0 top-0 -z-10 h-full w-screen bg-[url('/background/hero/hero-background@2x.webp')] bg-cover bg-center pt-[50px] md:pb-0 md:pt-[60px] xl:pb-[80px] xl:pt-[106px];
   }
   .hero-btn {
     @apply relative mx-auto flex h-[53px] w-[280px] items-center justify-center bg-white/10 px-16 py-[18px] text-lg font-bold hover:bg-white/20 md:mx-0 md:h-[50px] md:w-[230px] md:py-3.5 xl:h-[71px] xl:w-[293px] xl:py-4 xl:text-[32px];
@@ -81,19 +81,19 @@
     @apply bg-[url('/icons/rhombus.svg')] bg-left bg-no-repeat pl-3.5 text-left text-xl font-medium uppercase leading-[1.1rem] text-white md:text-[22px] md:leading-[0.818] xl:text-[28px]/6;
   }
   .slide-one {
-    @apply bg-center absolute top-0 -z-10 h-[851px] w-screen translate-x-full bg-[url('/background/services/Background@2x_result.webp')] bg-cover md:h-[780px];
+    @apply absolute top-0 -z-10 h-[851px] w-screen translate-x-full bg-[url('/background/services/Background@2x_result.webp')] bg-cover bg-center md:h-[780px];
   }
   .slide-two {
-    @apply bg-center absolute top-0 -z-10 h-[851px] w-screen translate-x-full bg-[url('/background/services/Background2@2x_result.webp')] bg-cover md:h-[780px];
+    @apply absolute top-0 -z-10 h-[851px] w-screen translate-x-full bg-[url('/background/services/Background2@2x_result.webp')] bg-cover bg-center md:h-[780px];
   }
   .slide-three {
-    @apply bg-center absolute top-0 -z-10 h-[851px] w-screen translate-x-full bg-[url('/background/services/Background3@2x_result.webp')] bg-cover md:h-[780px];
+    @apply absolute top-0 -z-10 h-[851px] w-screen translate-x-full bg-[url('/background/services/Background3@2x_result.webp')] bg-cover bg-center md:h-[780px];
   }
   .slide-four {
-    @apply bg-center absolute top-0 -z-10 h-[851px] w-screen translate-x-full bg-[url('/background/services/Background4@2x_result.webp')] bg-cover md:h-[780px];
+    @apply absolute top-0 -z-10 h-[851px] w-screen translate-x-full bg-[url('/background/services/Background4@2x_result.webp')] bg-cover bg-center md:h-[780px];
   }
   .slide-five {
-    @apply bg-center absolute top-0 -z-10 h-[851px] w-screen translate-x-full bg-[url('/background/services/Background5@2x_result.webp')] bg-cover md:h-[780px];
+    @apply absolute top-0 -z-10 h-[851px] w-screen translate-x-full bg-[url('/background/services/Background5@2x_result.webp')] bg-cover bg-center md:h-[780px];
   }
   .active-slide {
     @apply animate-[sliderForward_320ms_ease-in_forwards];
@@ -101,40 +101,51 @@
   .slide-change {
     @apply animate-[sliderBack_350ms_ease-in_forwards];
   }
-  .detailed-text{
+  .detailed-text {
     @apply text-xs/6 font-extralight tracking-[0.2em];
   }
 
   /*CAREER*/
   .career {
-    @apply bg-center h-full w-screen bg-[url('/background/career/career@2x.webp')] bg-cover xl:py-20;
+    @apply h-full w-screen bg-[url('/background/career/career@2x.webp')] bg-cover bg-center xl:py-20;
   }
   .career-list {
-    @apply md:mb-6 xl:flex gap-6 xl:mb-[21px];
+    @apply gap-6 md:mb-6 xl:mb-[21px] xl:flex;
   }
   .career-list-title {
-    @apply max-md:text-sm mb-2 md:leading-5 xl:w-[283px] text-end xl:mb-0 xl:text-lg/6;
+    @apply mb-2 text-end max-md:text-sm md:leading-5 xl:mb-0 xl:w-[283px] xl:text-lg/6;
   }
   .career-list-description {
-    @apply mb-4 text-xs/5 xl:leading-6 font-extralight md:w-[221px] text-end xl:text-left xl:w-[285px];
+    @apply mb-4 text-end text-xs/5 font-extralight md:w-[221px] xl:w-[285px] xl:text-left xl:leading-6;
   }
   .input {
-    @apply h-6 w-full text-[13px]/6 bg-white/5 font-extralight px-2 placeholder:text-white/20 focus:outline-none xl:leading-[1.2] xl:text-xl xl:h-7;
+    @apply h-6 w-full bg-white/5 px-2 text-[13px]/6 font-extralight placeholder:text-white/20 focus:outline-none xl:h-7 xl:text-xl xl:leading-[1.2];
   }
-  .checkbox-label{
-    @apply md:w-[192px] xl:w-[258px] text-xs leading-[1.83] xl:leading-6 font-extralight block;
+  .checkbox-label {
+    @apply block text-xs font-extralight leading-[1.83] md:w-[192px] xl:w-[258px] xl:leading-6;
   }
-  .career-button{
-    @apply ml-auto w-fit block text-3xl/tight xl:text-[32px]/10 font-medium;
+  .career-button {
+    @apply ml-auto block w-fit text-3xl/tight font-medium xl:text-[32px]/10;
   }
-  .form-error{
-    @apply absolute top-14 pl-6 w-fit bg-[url('/icons/cross.svg')] bg-no-repeat bg-contain right-0 text-xs/5 font-extralight tracking-[0.2em] text-[#FF5757];
+  .form-error {
+    @apply absolute right-0 top-14 w-fit bg-[url('/icons/cross.svg')] bg-contain bg-no-repeat pl-6 text-xs/5 font-extralight tracking-[0.2em] text-[#FF5757];
   }
-  .checkbox{
-    @apply h-[22px] min-w-[22px] bg-[url('/icons/checkbox.svg')] checked:bg-[url('/icons/checkbox_checked.svg')] xl:h-6 xl:w-6 appearance-none xl:bg-[url('/icons/checkbox_desk.svg')] xl:checked:bg-[url('/icons/checkbox_checked_desk.svg')];
+  .checkbox {
+    @apply h-[22px] min-w-[22px] appearance-none bg-[url('/icons/checkbox.svg')] checked:bg-[url('/icons/checkbox_checked.svg')] xl:h-6 xl:w-6 xl:bg-[url('/icons/checkbox_desk.svg')] xl:checked:bg-[url('/icons/checkbox_checked_desk.svg')];
   }
-}
 
-button {
-  outline: none;
+  /*GALLERY*/
+  .gallery {
+    @apply h-full w-screen bg-[url('/background/gallery/gallery@2x.webp')] bg-cover bg-center xl:py-20;
+  }
+  .active-image {
+    @apply mx-auto;
+  }
+  .gallery-image {
+    @apply mx-auto bg-[#D9D9D9] opacity-50 shadow-[0_4px_4px_0_rgba(0,0,0,0.3)] drop-shadow-[0_0_100px_rgba(9,20,16,0.50)];
+  }
+  .button-next,
+  .button-prev {
+    @apply -bottom-2 text-white absolute z-50 text-[33px] w-[294px] font-thin uppercase;
+  }
 }
